v2/transaction/transaction_monitoring/post_transaction_request.mdx
## Post Transaction Monitoring Request

The Transaction Monitoring API endpoint processes transactions in real-time, calculating the fraud percentage based on your predefined thresholds and limits. This endpoint allows for detailed monitoring of transactions to detect and flag potentially fraudulent activity. All fields in the request are required to ensure a comprehensive assessment, and each transaction's reference field must be unique for accurate tracking.

### Request Endpoint
**POST:** `{{BASE_URL}}/api/v1/monitoring/transaction_monitoring/`

- **Media-Type:** `application/json`

### Status Codes
- **201 Created:** Transaction processed successfully.
- **400 Bad Request:** Missing or invalid fields in the request.
- **500 Internal Server Error:** Unexpected error during processing. The request body is not set correctly.

### Suspicious Activity Codes:
- **450** - Suspicious Transaction Detected (Requires Manual Review)
- **451** - High-Risk Transaction (Potential Fraud)
- **452** - Unusual Transaction Behavior (Pattern Anomaly)
- **453** - Velocity Check Failed (Too Many Transactions in Short Time)
- **454** - Geographic Inconsistency (Unusual Location)
- **455** - Transaction Amount Too High (Above Threshold)
- **456** - Blacklisted Account or Entity
- **457** - Repeated Failed Transactions (Possible Fraud Attempt)

### Safe Activity code
- **200** - Transaction Approved (No Issues)
- **201** - Transaction Successfully Processed (Created)
- **202** - Transaction Pending Review (Routine Check, No Immediate Risk)
- **210** - Trusted Transaction (Verified and Safe)
- **211** - Low-Risk Transaction (No Anomalies Detected)
- **212** - Recurring Transaction Approved (Previously Authorized Pattern)
- **220** - Whitelisted Entity (Pre-approved Account or Business)
- **221** - Known Customer (Transaction Aligns with User History)

### Payload Example Request
```json
{
  "transaction_id": "12345678",
  "amount": 14000000,
  "currency": "NGN",
  "transaction_type": "card",
  "account_type": "individual", //individual or corporate
  "origin_account": {
    "account_number": "9876543219",
    "bank_code": "001"
  },
  "destination_account": {
    "account_number": "123456789",
    "bank_code": "002"
  },
  "customer_details": {
    "customer_name": "Muhammad Ibrahim Isah",
    "customer_email": "Tila.doe@example.com",
    "bvn": "22430372151"
  },
  "additional_info": {
    "ip_address": "192.168.1.1",
    "location": "San Francisco, CA", //"lat=-30.6556,lon=-65.7655"
    "transaction_description": "Payment for order #789",
  },
  "run_kyc": false //set to true when needed
}
```

201 Created Response
```json
{
    "status": "Success",
    "data": {
        "activity_code": "450",
        "status": "suspicious",
        "comment": [
            "4 rule(s) triggered"
        ]
    },
    "message": "Transaction was successfully processed"
}
```

### Request Body
| Field               | Description                                                              | Type   |
|---------------------|--------------------------------------------------------------------------|--------|
| `transaction_id`    | This is the unique identifier for the transaction                        | `String` |
| `amount`            | The transaction amount                                                   | `Float` |
| `currency`          | This is transaction currency (e.g., USD, NGN)                            | `String` |
| `transaction_type`  | Type of the transaction (transfer, card, ussd, web)                           | `String` |
| `account_type`      | Account type associated with the transaction (individual or corporate)   | `String` |
| `status`            | Status of the transaction (e.g., completed, pending)                     | `String` |
| `origin_account`    | Details of the originating account                                       | `Object` |
| `- account_number`    | Account number of the originating account                               | `String` |
| `- bank_code`          | Bank code of the originating account                                   | `String` |
| `destination_account` | Details of the destination account                                     | `Object` |
| `- account_number`    | Account number of the destination account                               | `String` |
| `- bank_code`         | Bank code of the destination account                                    | `String` |
| `customer_details`   | Information about the verified customer initiating the transaction.     | `Object` |
| `- customer_name`     | Customer's full name                                                    | `String` |
| `- customer_email`    | Customer's email address                                                | `String` |
| `- bvn`              |  Customer's BVN (used in building a profile for the customer. Optional)            | `String` |
| `additional_info`    | Additional details regarding the transaction                            | `Object` |
| `- ip_address`        | IP address of the customer during the transaction                       | `String` |
| `- location`           | Customer's location (can be formatted as "lat=-30.6556,lon=-65.7655")  | `String` |
| `- transaction_description` | Description of the transaction (e.g., Payment for order #789)     | `String` |
| `run_kyc` | Run KYC check on the customer (Optional) | `Boolean` |
